--- a/src/templates/item.hbs
+++ b/src/templates/item.hbs
@@ -4,11 +4,11 @@
                                 data-aos-delay="100">
     <img src="{{product.images.[0].src}}" alt="{{product.title}}" />
     <span class="absolute top-3 left-3 uppercase text-white p-1 rounded bg-dark">used</span>
-    <div class="flex justify-between">
+    <div class="mt-2 flex justify-between">
         <p class="text-[14px] font-bold">{{product.title}}</p>
         <p class="text-[14px]">Condition</p>
     </div>
-    <div class="flex justify-between">
+    <div class="flex justify-between mb-2">
         {{log product}}
         {{#if product.variants.[0].price}}
         <p class="text-[14px] font-bold">{{product.variants.[0].price}} KR</p>
