--- a/src/templates/item.hbs
+++ b/src/templates/item.hbs
@@ -3,7 +3,7 @@
 <li class="font-['Space_Grotesk'] relative relative menu__item h-full flex flex-col justify-evenly"  data-aos="fade-down" 
                                 data-aos-delay="100">
     <img src="{{product.images.[0].src}}" alt="{{product.title}}" />
-    <span class="absolute top-3 left-3 uppercase text-white p-1 rounded bg-dark">used</span>
+    <span class="text-[12px] absolute top-3 left-3 uppercase text-white p-1 rounded bg-dark">used</span>
     <div class="mt-2 flex justify-between">
         <p class="text-[14px] font-bold">{{product.title}}</p>
         <p class="text-[14px]">Condition</p>
